--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <tr>
                     <th>Lunes</th>
                     <th>Martes</th>
-                    <th>Miercoles</th>
+                    <th>Miércoles</th>
                     <th>Jueves</th>
                     <th>Viernes</th>
                     <th>Sábado</th>
